--- a/src/content/graphos/basics/operations/defer.mdx
+++ b/src/content/graphos/basics/operations/defer.mdx
@@ -156,7 +156,7 @@ To use `@defer` successfully, your supergraph and its clients must meet the requ
   - This functionality is currently supported in Apollo Client for [Web](/react/data/defer) and [Kotlin (experimental)](/kotlin/fetching/defer).
 - Your supergraph must be one of:
   - A [cloud supergraph](../graphs/#cloud-supergraphs)
-  - A [self-hosted supergraph](../graphs/#self-hosted-supergraphs) running the [Apollo Router](/router/)
+  - A [self-hosted supergraph](../graphs/#self-hosted-supergraphs) running the [GraphOS Router](/router/)
 
 ### Entity-specific requirements
 
