--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -25,7 +25,7 @@ If you have multiple subgraphs, each needs to be exposed to Apollo. Your supergr
 
 In a supergraph, each GraphQL API is called a _subgraph_. Apollo refers to these GraphQL APIs as subgraphs, even if you only connect one GraphQL API.
 
-The Apollo Router doesn't supported nested federation—that is, a subgraph cannot act as a supergraph for another set of subgraphs.
+The GraphOS Router doesn't supported nested federation—that is, a subgraph cannot act as a supergraph for another set of subgraphs.
 
 </Note>
 
@@ -85,7 +85,7 @@ The launch process typically takes 1-2 minutes but may take up to 5 minutes. Dur
 
 Dedicated cloud routers have a separate UI for management and configuration. Open the **Cloud Router** page from the left navigation. This page shows a summary of your cloud router, including its **API endpoint** and **API details**.
 
-Use the **Configuration** tab to manage your cloud router's configuration, including **Secrets** and **Router configuration YAML**. See the [Apollo Router docs](/router/configuration/overview) for more information.
+Use the **Configuration** tab to manage your cloud router's configuration, including **Secrets** and **Router configuration YAML**. See the [router docs](/router/configuration/overview) for more information.
 
 <img
   className="screenshot"
