--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -32,7 +32,7 @@ You can sign up for a GraphOS Enterprise trial to test out most Enterprise featu
 
 ## Self-hosted routing
 
-With GraphOS Enterprise, you can deploy your supergraph's [Apollo Router](/router/) instances into your own infrastructure, instead of using a GraphOS-provisioned cloud router:
+With GraphOS Enterprise, you can deploy your supergraph's router instances into your own infrastructure, instead of using a GraphOS-provisioned cloud router:
 
 ```mermaid
 flowchart LR;
