--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -27,7 +27,7 @@ Providing clear instructions on how to test changes across supergraph components
 
 ### Use compute resources efficiently
 
-When using the Apollo Router and subgraph services, balancing performance with efficiency is key.
+When using the GraphOS Router and subgraph services, balancing performance with efficiency is key.
 By monitoring pod metrics and graph execution metrics, you can identify optimization opportunities and maintain efficient system performance.
 
 ### Catch problems before they go into production
