--- a/src/content/graphos/explorer/subscriptions-explorer.mdx
+++ b/src/content/graphos/explorer/subscriptions-explorer.mdx
@@ -29,8 +29,8 @@ Remember that the path and protocol of your subscriptions URL might differ from 
 
   - If you aren't sure which subprotocol the server uses, choose **Autodetect** and the Explorer will attempt to determine the correct subprotocol.
 
-- If you're subscribing to the Apollo Router, choose **Multipart subscriptions**. This is the HTTP-based protocol that the router uses.
-  - [Learn more about subscriptions with the Apollo Router.](/router/executing-operations/subscription-support)
+- If you're subscribing to the router, choose **Multipart subscriptions**. This is the HTTP-based protocol that the router uses.
+  - [Learn more about subscriptions with the router.](/router/executing-operations/subscription-support)
 
 </ExpansionPanel>
 
