--- a/src/content/shared/pq-security-levels.mdx
+++ b/src/content/shared/pq-security-levels.mdx
@@ -1,4 +1,4 @@
-The Apollo Router supports the following security levels, in increasing order of restrictiveness:
+The GraphOS Router supports the following security levels, in increasing order of restrictiveness:
 
 - **Allow operation IDs**: Clients can optionally execute an operation by providing the operation's PQL-specified ID.
   - All other levels also provide this core capability.
