--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -9,11 +9,11 @@ tags: [gateway, performance]
 
 If your supergraph gateway uses Apollo Server with the `@apollo/gateway` library, this article provides recommendations for improving your gateway's performance.
 
-## Consider moving to the Apollo Router
+## Consider moving to the Apollo Router Core
 
-The Apollo Router is a high-throughput, low-latency Apollo Federation GraphQL gateway written in Rust. Its performance and consistency significantly exceed any Node.js-based gateway.
+The Apollo Router Core is a high-throughput, low-latency GraphQL federation gateway written in Rust. Its performance and consistency significantly exceed any Node.js-based gateway.
 
-[Migrating to Apollo Router from `@apollo/gateway`](/router/migrating-from-gateway)
+[Migrating to Apollo Router Core from `@apollo/gateway`](/router/migrating-from-gateway)
 
 ## Disable or reduce `ftv1` inline tracing
 
