--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -1,13 +1,13 @@
 ---
-title: Optimizing Custom Apollo Router Builds
+title: Optimizing Custom GraphOS Router Builds
 subtitle: Enhance performance, minimize build time, and address system requirements
-description: Recommendations and considerations for minimizing build time when using custom Apollo Router builds.
+description: Recommendations and considerations for minimizing build time when using custom Apollo GraphOS Router builds.
 published: 2023-01-19
 id: TN0030
 tags: [router]
 ---
 
-While running the Apollo Router in production has great performance, this comes at the cost of increased build time and higher system requirements when compiling from source.
+While running the GraphOS Router in production has great performance, this comes at the cost of increased build time and higher system requirements when compiling from source.
 
 Building the router including custom plugins from source is a memory-expensive process, and as such it's not suited for all build environments.
 
