--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -82,7 +82,7 @@ flowchart LR
     mainbranch -. publish .-> mainvariant
 ```
 
-In the deployment environments, your subgraphs and the Apollo Router run with the router configured to pull from a specific variant.
+In the deployment environments, your subgraphs and the GraphOS Router run with the router configured to pull from a specific variant.
 
 ```mermaid
 flowchart TB
@@ -161,7 +161,7 @@ flowchart LR
     mainbranch -- publish --> mainvariant
 ```
 
-In the deployment environments, your subgraphs and the Apollo Router run with the router configured to pull from a specific variant.
+In the deployment environments, your subgraphs and the GraphOS Router run with the router configured to pull from a specific variant.
 
 ```mermaid
 flowchart TB
