--- a/src/content/basics/changelog.mdx
+++ b/src/content/basics/changelog.mdx
@@ -9,7 +9,7 @@ Each Apollo product maintains its own changelog, usually in its GitHub repositor
 - [GraphOS Studio](https://github.com/apollographql/apollo-studio-community/blob/main/CHANGELOG.md)
 - [Apollo Federation](https://www.apollographql.com/docs/federation/federation-versions/)
 - [Rover CLI](https://github.com/apollographql/rover/blob/main/CHANGELOG.md)
-- [The Apollo Router](https://github.com/apollographql/router/releases)
+- [The Apollo Router Core](https://github.com/apollographql/router/releases)
 - [Apollo Server](https://github.com/apollographql/apollo-server/blob/main/packages/server/CHANGELOG.md)
 - [Apollo Client for React](https://github.com/apollographql/apollo-client/blob/main/CHANGELOG.md)
 - [Apollo Client for Kotlin](https://github.com/apollographql/apollo-kotlin/releases)
