--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -8,7 +8,7 @@ description: Cloud routers support GraphQL subscriptions by default, enabling cl
 
 Cloud supergraph support for GraphQL subscriptions is currently in [preview](/resources/product-launch-stages#preview).
 
-You can also use subscriptions with an Enterprise self-hosted supergraph. See the [Apollo Router documentation](/router/executing-operations/subscription-support/).
+You can also use subscriptions with an Enterprise self-hosted supergraph. See the [GraphOS Router documentation](/router/executing-operations/subscription-support/).
 
 </PreviewFeature>
 
