--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -18,7 +18,7 @@ To effectively protect a GraphQL API, it's crucial to combine a variety of appro
 You can start by using existing security measures.
 These include enforcing authentication and authorization in both the graph and upstream systems.
 
-It's also important to prevent data leakage at the "front door" with tools like the Apollo Router.
+It's also important to prevent data leakage at the "front door" with tools like the GraphOS Router.
 Combining approaches like these creates a defense-in-depth strategy that maximizes security and protects your data.
 
 ### Protect supergraph infrastructure
