--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -1,7 +1,7 @@
 ---
-title: Sending Apollo Router Traces and Metrics to APM Tools Using OpenTelemetry
+title: Sending Router Traces and Metrics to APM Tools Using OpenTelemetry
 subtitle: Gain insight into your graph's performance and stability
-description: Sending Apollo Router traces and metrics to APM tools to gain insight into your graph's performance and stability.
+description: Sending Apollo GraphOS Router traces and metrics to APM tools to gain insight into your graph's performance and stability.
 published: 2022-10-27
 id: TN0015
 tags: [observability, router]
@@ -9,7 +9,7 @@ tags: [observability, router]
 
 <EnterpriseFeature>
 
-Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing#graphos-router) to learn more.
+Self-hosting the GraphOS Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing#graphos-router) to learn more.
 
 </EnterpriseFeature>
 
@@ -21,7 +21,7 @@ Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enter
 
 </Tip>
 
-Application performance monitoring (APM) tools are critical for many organizations, and having direct insight into how your graph is performing is an important piece of overall observability into your systems' stability and performance. The Apollo Router and subgraphs aren't any different. While you may currently instrument your existing subgraphs with your APM's tooling, you may need to connect Apollo Router as well to get a clear view of your graph's health.
+Application performance monitoring (APM) tools are critical for many organizations, and having direct insight into how your graph is performing is an important piece of overall observability into your systems' stability and performance. The GraphOS Router and subgraphs aren't any different. While you may currently instrument your existing subgraphs with your APM's tooling, you may need to connect router as well to get a clear view of your graph's health.
 
 Thankfully, there's an answer on connecting the two pieces of software together: [OpenTelemetry](https://opentelemetry.io/). We've previously discussed utilizing [OpenTelemetry previously to connect to Prometheus](/technotes/TN0003-opentelemetry-traces-to-prometheus), and much of the same will apply to this use-case as well.
 
@@ -100,7 +100,7 @@ For more information on configuration options, see the documentation on both [ca
 
 ## Connecting directly
 
-Instead of using the OpenTelemetry Collector, you can configure your Apollo Router instances to send data directly to your APM tool. To do so, you modify the router's YAML configuration file to set the export to use a header (or in this case, metadata), along with the traces/metrics for passing the token.
+Instead of using the OpenTelemetry Collector, you can configure your GraphOS Router instances to send data directly to your APM tool. To do so, you modify the router's YAML configuration file to set the export to use a header (or in this case, metadata), along with the traces/metrics for passing the token.
 
 Here's an example router configuration for connecting directly to New Relic:
 
