--- a/src/content/technotes/TN0035-load-testing-graphql.mdx
+++ b/src/content/technotes/TN0035-load-testing-graphql.mdx
@@ -58,4 +58,4 @@ Performance bottlenecks will likely be at the application level (resolvers and b
 
 When a GraphQL API encounters a new operation, the operation must be parsed into the proper format, validated against the existing schema, and then finally executed. The router goes through the additional step of [query planning](/federation/query-plans/) as well. These steps can account for some noticeable runtime overhead and latency if the volume of unique operations is high enough. All these steps must happen for the initial request of every unique operation against your graph.
 
-Most of these steps are highly cacheable. Apollo has several built-in features that take advantage of this, such as [Automatic Persisted Queries (APQs)](/apollo-server/performance/apq/). APQ's are on by default in Apollo Server/Gateway and the Apollo Router, and just a simple configuration setting in Apollo Client to enable them. A graph which processes a high cardinality of operations that are only executed once, can't take advantage of most of these features. This isn't a big concern in most real world applications as operations are normally executed more than once.
+Most of these steps are highly cacheable. Apollo has several built-in features that take advantage of this, such as [Automatic Persisted Queries (APQs)](/apollo-server/performance/apq/). APQ's are on by default in Apollo Server/Gateway and the GraphOS Router, and just a simple configuration setting in Apollo Client to enable them. A graph which processes a high cardinality of operations that are only executed once, can't take advantage of most of these features. This isn't a big concern in most real world applications as operations are normally executed more than once.
