--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -1,13 +1,13 @@
 ---
-title: Does Apollo Router Replace My API Gateway?
-subtitle: How the Apollo Router differs from API gateways
-description: The Apollo Router isn't based on URLs or REST endpoints, its a GraphQL-native solution to handle your clients API operations.
+title: Does GraphOS Router Replace My API Gateway?
+subtitle: How the GraphOS Router differs from API gateways
+description: The GraphOS Router isn't based on URLs or REST endpoints, its a GraphQL-native solution to handle your clients API operations.
 published: 2023-03-31
 id: TN0037
 tags: [federation, router, gateway]
 ---
 
-The [Apollo Router](https://www.apollographql.com/docs/router) is a high-performant GraphQL gateway that supports [Apollo Federation](https://www.apollographql.com/docs/federation). It handles GraphQL requests that can then be resolved by many GraphQL subgraphs underneath. When comparing the router to other API technologies in the market today, a natural first comparison to draw is to API gateways. Tools like Kong or your cloud provider offer capabilities to secure, manage, and monitor your API endpoints.
+The GraphOS Router is a high-performant GraphQL gateway that supports [Apollo Federation](https://www.apollographql.com/docs/federation). It handles GraphQL requests that can then be resolved by many GraphQL subgraphs underneath. When comparing the router to other API technologies in the market today, a natural first comparison to draw is to API gateways. Tools like Kong or your cloud provider offer capabilities to secure, manage, and monitor your API endpoints.
 These gateways usually live at the outermost edges of your companies infrastructure. Sometimes they are even required by your security team so that all inbound and outbound traffic flows through the same top layer of your tech stack.
 
 The key distinction of the router is that is not based on URLs or REST endpoints. The router is a GraphQL-native solution to handle your clients API operations.
@@ -20,7 +20,7 @@ Apollo GraphQL and Kong have partnered to produce a joint paper that provides AP
 
 ## GraphQL native
 
-First, let's define what we mean by "GraphQL native." Apollo Router runs all the client operations against a [supergraph](/intro/platform/).
+First, let's define what we mean by "GraphQL native." The GraphOS Router runs all the client operations against a [supergraph](/intro/platform/).
 This means that requests processed by the router are not for any random service, but are restricted to what is defined and published by the [GraphQL subgraphs](/federation/building-supergraphs/subgraphs-overview) for a given supergraph schema.
 Subgraphs define the schema and capabilities they want to expose. A well-defined GraphQL schema does not just expose all the data available in a company, instead, a [demand-oriented schema](/technotes/TN0027-demand-oriented-schema-design) gives clients access to all the operations they need to execute, but without over exposing your data.
 Since subgraphs are also the ones that define their service capabilities, the router can be the central location to enforce standardized rules or policies that are declared by subgraphs, for example, [a directive-based authN/Z plugin](https://www.apollographql.com/blog/platform/financial-services/directive-based-authorization-for-financial-services/).
@@ -48,7 +48,7 @@ gatewayConfig:
 ## Support for non-GraphQL APIs
 
 GraphQL is an innovative technology that give clients much more control over their operations and a common language for service teams to communicate. However, GraphQL usually is not the one and only API technology used by companies today.
-If you need to have a common gateway to secure REST endpoints and GraphQL endpoints, the Apollo Router can be a complimentary tool that lives underneath this higher-level API gateway. You can configure company-wide policies at the outermost edge layer, and anything else that is better defined as a GraphQL-specific policy can be managed by the router.
+If you need to have a common gateway to secure REST endpoints and GraphQL endpoints, the GraphOS Router can be a complimentary tool that lives underneath this higher-level API gateway. You can configure company-wide policies at the outermost edge layer, and anything else that is better defined as a GraphQL-specific policy can be managed by the router.
 In addition, using a [defense-in-depth](https://csrc.nist.gov/glossary/term/defense_in_depth) security strategy reduces your companies risk, so having both an API gateway and router applying shared rules can lead to a more secure environment.
 
 ```mermaid
@@ -101,7 +101,7 @@ Subgraph1 --> REST2
 Subgraph2 --> DB2
 ```
 
-## When to consider Apollo Router
+## When to consider GraphOS Router
 
 If you are running a GraphQL API in production, and you want to be able to:
 
@@ -110,4 +110,4 @@ If you are running a GraphQL API in production, and you want to be able to:
 - [Secure your GraphQL schema](https://www.apollographql.com/docs/router/configuration/authn-jwt)
 - [Extend the GraphQL runtime with custom features](https://www.apollographql.com/docs/router/customizations/overview)
 
-And do all this with [minimal latency and scalable performance](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust) then consider adopting [GraphOS and Apollo Router](/graphos/) today!
+And do all this with [minimal latency and scalable performance](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust) then consider adopting [GraphOS and the GraphOS Router](/graphos/) today!
