--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,28 +1,28 @@
 ---
-title: Debugging Subgraph Requests from the Apollo Router or @apollo/gateway
+title: Debugging Subgraph Requests from the GraphOS Router or @apollo/gateway
 subtitle: Log query plans and subgraph calls to help debug problematic queries
-description: Log query plans and subgraph calls with the Apollo Router and @apollo/gateway to help debug problematic queries.
+description: Log query plans and subgraph calls with the Apollo GraphOS Router and @apollo/gateway to help debug problematic queries.
 published: 2023-04-13
 id: TN0039
 tags: [federation, gateway, router, subgraphs]
 ---
 
-As your graph grows, you may need to debug a problematic query for one reason or another. The [Apollo Router](/router) and [`@apollo/gateway`](/apollo-server/using-federation/api/apollo-gateway/) both serve as an entry point into your [federated graph](/federation) and offer ways to debug requests.
+As your graph grows, you may need to debug a problematic query for one reason or another. The router and `@apollo/gateway` both serve as an entry point into your federated graph and offer ways to debug requests.
 
 Each client request goes through a process called [query planning](/graphos/explorer/additional-features/#query-plans-for-supergraphs) that generates the subgraph requests to execute. You can log out the query plan in both the router and gateway.
 
 ## Output query plans with headers
 
-With [the Apollo Router](/router/) `v0.16.0+` and [`@apollo/gateway`](/apollo-server/using-federation/api/apollo-gateway/) `v2.5.4+`, you can pass the following headers to return the query plans in the GraphQL response extensions:
+With router v0.16.0+ and `@apollo/gateway` v2.5.4+, you can pass the following headers to return the query plans in the GraphQL response extensions:
 
 - Including the `Apollo-Query-Plan-Experimental` header returns the query plan in the response extensions
 - Additionally, including the `Apollo-Query-Plan-Experimental-Format` header with one of the supported options changes the output format:
   - A value of `prettified` returns a human-readable string of the query plan
   - A value of `internal` returns a JSON representation of the query plan
 
-## Log Apollo Router subgraph calls
+## Log router subgraph calls
 
-If, instead, you want to debug your subgraph HTTP requests in an Apollo Router instance, you can use [Rhai scripts](/router/customizations/rhai) to log the necessary information out. An example Rhai script is shown below.
+If, instead, you want to debug your subgraph HTTP requests in a router instance, you can use [Rhai scripts](/router/customizations/rhai) to log the necessary information out. An example Rhai script is shown below.
 
 <Caution>
 
@@ -41,7 +41,7 @@ fn subgraph_service(service, subgraph) {
 
 The above uses an inline closure within the `map_request` function of the `subgraph_service` hook to log the subgraph-related information.
 
-To enable query plans, you must run the Apollo Router with the `--dev` flag and leverage [Apollo Sandbox](https://studio.apollographql.com/sandbox) to [display your query plans](/graphos/explorer/additional-features/#query-plans-for-supergraphs).
+To enable query plans, you must run the router with the `--dev` flag and leverage [Apollo Sandbox](https://studio.apollographql.com/sandbox) to [display your query plans](/graphos/explorer/additional-features/#query-plans-for-supergraphs).
 
 As an alternative to using `--dev`, you can also enable query plans via the below configuration option, however, Apollo strongly discourages this as the feature may be removed or renamed in the future.
 
