Allow styling on GraphQLIcon

--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -3,6 +3,10 @@ title: The Apollo GraphOS platform
 description: Unify your infrastructure with GraphQL
 ---
 
+import {GraphQLIcon} from '../../../components/Icons';
+
+Does this inline <GraphQLIcon style={{ color: '#E10098', display: 'inline-block' }} /> work?
+
 Apollo GraphOS is the platform for building, managing, and scaling a _supergraph_: a unified network of your organization's microservices and their data sources—all composed into a single distributed API.
 
 With one query to your supergraph's _router_, an application client can fetch data from any combination of your services:
