--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -14,7 +14,7 @@ In this guide, learn about the fundamental concepts and configuration underlying
 
 ## About Apollo's reference architecture
 
-In a modern cloud-native stack, your components must be scalable with high availability. The [Apollo Router Core](/router) is built with this in mind. The router is [much faster and less resource-intensive than the Apollo Gateway](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust/#apollo-router-vs-apollo-gateway-benchmarks), Apollo's original runtime.
+In a modern cloud-native stack, your components must be scalable with high availability. The Apollo Router Core is built with this in mind. The router is [much faster and less resource-intensive than the Apollo Gateway](https://www.apollographql.com/blog/announcement/backend/apollo-router-our-graphql-federation-runtime-in-rust/#apollo-router-vs-apollo-gateway-benchmarks), Apollo's original runtime.
 
 Apollo provides a reference architecture for self-hosting the router and subgraphs in an enterprise cloud environment using Kubernetes and Helm. It demonstrates how to deploy the router and subgraphs in a cloud environment, including the use of [Apollo GraphOS](/graphos) and the following enterprise router features:
 
@@ -351,7 +351,7 @@ flowchart LR
 
 ## Further reading
 
-- [Apollo Router Core introduction](/router/)
+- [Router introduction](/router/)
 - [Containerizing the router](/router/containerization/overview)
 - [Managing router resources in Kubernetes](/technotes/TN0016-router-resource-management/)
 - [Sending router operation metrics to GraphOS](/router/configuration/telemetry/apollo-telemetry)
